prevent event navigation links from internal wrapping

--- a/sites/all/themes/the_ark/sass/components/content/event/_event-navigation.scss
+++ b/sites/all/themes/the_ark/sass/components/content/event/_event-navigation.scss
@@ -50,6 +50,7 @@
     background-color: inherit;
     color: $teal;
     text-transform: inherit;
+    white-space: nowrap;
 
     &:hover {
       background-color: inherit;
